# game-engine-rs

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  README.md  TODO  cargo_dep_sha.sh  config.toml  default.ptem  find_dlls.bat  hello.rs  project copy.yaml  project.ron  project.yaml  scratch  scratch2  test.ron  test.yaml  todo.txt
.cargo/: config.toml
component-derive/: Cargo.toml
component-derive/src/: lib.rs
derive-macro/: Cargo.toml
derive-macro/src/: lib.rs
id/: Cargo.toml
id/src/: lib.rs
id_internal/: Cargo.toml
id_internal/src/: lib.rs
id_macro/: Cargo.toml
id_macro/src/: lib.rs
shaders/: debug1.frag  debug1.geom  debug3.geom  model.frag  multi_radixsort_v1.0.comp  prefix_sum.comp  transform.comp  util.glsl
shaders/26/: shader.vert  vert.spv
shaders/lighting/: light_debug.frag  light_debug.geom  light_debug.vert  light_tile.comp  lighting.comp  lighting.glsl
shaders/particle_shaders/: particle.glsl  particle_sort.comp  particles.comp  particles.frag  particles.geom  particles_debug.frag  particles_debug.geom
src/: __main.rs  _main.rs  asset_manager.rs  camera.rs  color_gradient.rs  components.rs  drag_drop.rs  ecs_main.rs  editor_cam.rs  editor_ui.rs  engine.rs  file_watcher.rs  frag.glsl  game.rs  input.rs  inspectable.rs  jit.rs  lib.rs  main.rs  mod-test-main.rs  model.rs  particle_sort.rs  particles.comp  particles.rs  perf.rs  physics.rs  project.rs  render_pipeline.rs  renderer.rs  renderer_component.rs  renderer_component2.rs  runtime_compilation.rs  serialize.rs  specs_main.rs  terrain.rs  terrain_eng.rs  texture.rs  time.rs  transform.comp  transform.rs  (+6 more)
src/editor/: drag_drop.rs  editor_cam.rs  editor_ui.rs  inspectable.rs  mod.rs
src/editor/editor_ui/: console.rs  entity_inspector.rs  game_window.rs  hierarchy.rs  key_shortcuts.rs  project.rs  scene_window.rs  util.rs
src/engine/: atomic_vec.rs  audio.rs  color_gradient.rs  component.rs  entity.rs  game_object.rs  input.rs  input_thread.rs  linked_list.rs  main_loop.rs  mod.rs  perf.rs  physics.rs  prelude.rs  project.rs  render_thread.rs  runtime_compilation.rs  storage.rs  terrain_eng.rs  time.rs  transform_compute.rs  utils.rs  world.rs
src/engine/audio/: asset.rs  component.rs  system.rs
src/engine/particles/: asset.rs  component.rs  mod.rs  particle_asset.rs  particle_sort.rs  particle_textures.rs  particles.rs  shaders.rs
src/engine/particles/particle_shaders/: particle.glsl  particle_sort.comp  particles.comp  particles.frag  particles.geom  particles_debug.frag  particles_debug.geom  radix_sort.comp
src/engine/physics/: collider.rs  rigid_body.rs
src/engine/project/: asset_manager.rs  file_watcher.rs  mod.rs  scene_manager.rs  serialize.rs
src/engine/rendering/: camera.rs  component.rs  debug.rs  lighting.rs  mod.rs  model.rs  pipeline.rs  renderer_component.rs  texture.rs  vulkan_manager.rs
src/engine/rendering/lighting/: light_bounding.rs  lighting.rs  lighting_asset.rs  lighting_compute.rs
src/engine/utils/: gpu_perf.rs  gradient.rs  perf.rs  pipeline.rs  radix_sort.rs
src/engine/world/: component.rs  entity.rs  mod.rs  transform.rs
src/particle_shaders/: particle.glsl  particle_sort.comp  particles.comp  particles.frag  particles.geom
src/particles_geom/: particles.frag  particles.geom  particles.vert
src/shaders/: cluster_light.frag  cluster_light.vert  debug1.vert  debug2.geom  light_debug.geom  light_debug.vert  light_tile.comp  lighting.comp  lighting.comp.spv  lighting.glsl  model.frag  model.vert  multi_radixsort.comp  multi_radixsort_histograms.comp  multi_radixsort_v1.0.comp  multi_radixsort_v1.2.comp  radix_sort.comp  transform.comp  update_renderers2.comp  util.glsl
