[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["lib"]
name = "game_engine"
path = "src/lib.rs"

[[bin]]
name = "game-engine-rs"
path = "src/main.rs"
# Add this to your Cargo.toml
[profile.dev.package.rapier3d]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# lto = "fat"
# panic = "abort"
# codegen-units = 1
debug = true

# [profile.debug]
# opt-level = 1


# [features]
# serde-serialize = [ "nalgebra-glm/serde-serialize" ]

[dependencies]

component-derive = { path = "component-derive" }
num_cpus = "*"
num-integer = "*"
# libloading = "*"
libc = "*"
rayon = "*"
crossbeam = "*"
once_cell = "*"
pqueue = "*"
rand = "*"
scoped_threadpool = "*"

nalgebra-glm = { version = "*", features = ["serde-serialize"]}


bytemuck = { version = "*", features = ["derive", "extern_crate_std", "min_const_generics"] }
# cgmath = "*"
png = "*"
image = "*"
serde = { version = "*", features = ["derive"] }
ron = "*"
serde_yaml = "*"
glium = { git = "https://github.com/glium/glium.git", rev = "60889a2" }

rapier3d = { version = "*", features = [ "simd-stable","parallel" ] }

parking_lot = "*"
deepmesa = "*"
force-send-sync = "*"
# assimp = "*"
noise = "*"


vulkano = "0.32.3"
vulkano-shaders = "0.32.0"
winit = "0.27.5"
vulkano-win = "0.32.0"


egui = "0.20.1"
# egui_vulkano = "*"
egui_winit_vulkano = "0.22.0"
egui-winit = "0.20.1"
egui_demo_lib = "0.20.0"
puffin_egui = "0.19.1"
egui_dock = "0.3.1"

tobj = "4.0.0"

walkdir = "*"
substring = "*"
lazy_static = "*"
notify = { version = "*", features = ["serde"] }
relative-path = "*"
sync-unsafe-cell = "0.1.0"
nohash-hasher = "*"
# rudac = "0.8.3"
# cpq = "0.2.0"

libloading = "0.8.0"
# windows-dll = "*"
# dylib = "*"
regex = "1.8.1"

notify-debouncer-full = "*"
const-fnv1a-hash = "1.1.0"
thincollections = "0.5.4"
