[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["lib"]
name = "game_engine"
path = "src/lib.rs"

[[bin]]
name = "game-engine-rs"
path = "src/main.rs"
# Add this to your Cargo.toml
[profile.dev.package.rapier3d]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
# lto = "fat"
# panic = "abort"
# codegen-units = 1
debug = true

[profile.dev]
opt-level = 1


# [features]
# serde-serialize = [ "nalgebra-glm/serde-serialize" ]

[target.'cfg(windows)'.dependencies]
mimalloc = { version = "*", default-features = false }

[dependencies]
thread-priority = "*"
id = { path = "id" }
id_macro = { path = "id_macro" }
num_cpus = "*"
num-integer = "*"
libc = "*"
rayon = "*"
crossbeam = "*"
once_cell = "*"
pqueue = "*"
rand = "*"
scoped_threadpool = "*"
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }
png = "*"
image = "*"
serde = { version = "*", features = ["derive"] }
ron = "*"
serde_yaml = "*"
glium = { git = "https://github.com/glium/glium.git" }

rapier3d = { version = "0.17.2", features = [
    "simd-stable",
    "parallel",
    "serde-serialize",
] }

parking_lot = { version = "*" }
deepmesa = "*"
force-send-sync = "*"
# assimp = "*"
noise = "*"


vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
winit = "0.28.2"
vulkano-win = "0.33.0"

egui = "0.22.0"
# egui_vulkano = "*"
egui_winit_vulkano = "0.25.0"
egui-winit = "0.22.0"
egui_demo_lib = "0.22.0"
puffin_egui = "0.22.0"
egui_dock = "0.6.3"

tobj = "4.0.0"

walkdir = "*"
substring = "*"
lazy_static = "1.5.0"
notify = { version = "*", features = ["serde"] }
relative-path = "*"
nohash-hasher = "*"
# rudac = "0.8.3"
# cpq = "0.2.0"

libloading = "0.8.0"
# windows-dll = "*"
# dylib = "*"
regex = "1.8.1"

notify-debouncer-full = "*"
const-fnv1a-hash = "1.1.0"
thincollections = "0.5.4"
config = "0.13.3"
segvec = "0.2.0"
dary_heap = "0.3.6"
bitvec = "1.0.1"
smallvec = "1.11.0"
kira = "0.8.7"
russimp = { version = "3.2.0", features = ["prebuilt"] }
rfd = "0.14.1"
# egui-gizmo = "0.11.0"
egui-gizmo = { path = "transform-gizmo" }
ncollide3d = "0.33.0"
